# android_ete_pytroch_lib

./: CMakeLists.txt  Readme.md  build.sh  build_android.sh  com_example_audiorecordertest_e2e.h  e2e.cpp  fbank.h  fbank_to_text_test.cc  feats_cmvn.ark  fft.cc  fft.h  kaldi_io.cc  kaldi_io.h  prepare.sh  question.sh  recognizer_impl.cc  recognizer_impl.h  test.cc  wave_reader.cc  wave_reader.h  wrapper_recognizer.cc  wrapper_recognizer.h
build_android/: CMakeCache.txt  Makefile  cmake_install.cmake  dynamic_Predictor
